--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,11 +28,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .[dev]
 
+    - name: Test with pyright
+      run: |
+        pyright sbi
+
     - name: Test with pytest
       run: |
         pip install torchtestcase
         pip install pytest pytest-cov
         pytest -m "not slow and not gpu" tests/ --cov=sbi --cov-report=xml
+      
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
